array.island.Island.scala.error
Erreur de compilation :
Island:5: error: not found: value length
  for (i <- 1 to length(num)){
                 ^