array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var niveau = 0
  var max = 0
  for (i <- 1 to length(num)){
    if (num(i) > max){
      max = num(i)
      niveau = num(i)
    }
    if (num(i) == 0){
      max = 0
    }
    
  }
}